Fix 'show more comments' button margin too big on mobile

--- a/frontend/src/components/comment-section.module.css
+++ b/frontend/src/components/comment-section.module.css
@@ -17,8 +17,11 @@
     border-bottom-left-radius: var(--mantine-radius-sm);
     border-bottom-right-radius: var(--mantine-radius-sm);
   }
+}
 
-  @media (max-width: $mantine-breakpoint-md) {
+@media (max-width: $mantine-breakpoint-md) {
+  .show-more,
+  .comment-tree {
     margin-left: 2em;
   }
 }
